--- a/StudentVotingSystem/src/main/resources/templates/group_form.html
+++ b/StudentVotingSystem/src/main/resources/templates/group_form.html
@@ -4,57 +4,105 @@
 <head>
 	<meta charset="ISO-8859-1">
 	<title>[[${pageTitle}]]</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" th:href="@{/styles/forms.css}"/>
+	<link rel="stylesheet" type="text/css" th:href="@{/styles/votingadmin.css}"/>
+	<script src="https://kit.fontawesome.com/869eb986ed.js" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
+
 <body>
-	<div class="container-fluid">
-		<div class="text-center"><h2>[[${pageTitle}]]</h2></div>
-		
-		<form th:action="@{/groups/save}" method="post" th:object="${group}" 
-			style="max-width: 500px; margin:0 auto;">
-				<input type="hidden" th:field="*{id_grup}">
-				
-				<div class="form-group row m-2">
-					<label class="col-sm-4 col-form-label">Facultate</label>
-					<div class="col-sm-8">
-						<input class="form-control" type="text" required th:field="*{facultate}"/>
+<nav class="navbar navbar-expand-md navbar-dark">
+		<a th:href="@{/voting_admin_home}" class="navbar-brand">Student Voting System</a>
+		<button
+			class="navbar-toggler"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#toggleMobileMenu"
+			aria-controls="toggleMobileMenu"
+			aria-expanded="false"
+			aria-label="Toggle Navigation"
+		>
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="toggleMobileMenu">
+			<ul class="navbar-nav ms-auto text-center">
+				<li>
+					<a class="nav-link" th:href="@{/students}">Studenti</a>
+				</li>
+				<li>
+					<a class="nav-link" th:href="@{/elections}">Chestionare de Vot</a>
+				</li>
+				<li>
+					<a class="nav-link" th:href="@{/options}">Optiuni de Vot</a>
+				</li>
+				<li>
+					<a class="nav-link active" th:href="@{/groups}">Grupuri</a>	
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" role="button">Profil</a>
+					<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+						<li class="dropdown-profile">Logat ca:<span sec:authentication="principal.authorities"></span></li>
+						<li class="dropdown-item">
+							<form th:action="@{/logout}" method="post">	
+								<input class="button_logout1" type="submit" value="Logout" />
+							</form>
+						</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+	</nav>
+<div class="container-form">
+	<div class="card"> 
+		<div class="card-body">
+			<h1 class="card-title"><h2 style="text-align: center;">[[${pageTitle}]]</h2></h1>
+			<div class="card-text" >
+				<form th:action="@{/groups/save}" method="post" th:object="${group}" >
+					<input type="hidden" th:field="*{id_grup}">
+					<div class="form-group">
+						<label for="FacultateInput"><b>Facultate</b></label>
+						<div class="col-sm-8">
+							<input  class="form-control form-control-sm" type="text" th:field="*{facultate}" required style="width:400px;"/>
+							<span id="error" th:if="${#fields.hasErrors('facultate')}" th:errors="*{facultate}">Full name error</span>
+						</div>
 					</div>
-				</div>
-				
-				<div class="form-group row m-2">
-					<label class="col-sm-4 col-form-label">Specializare</label>
-					<div class="col-sm-8">
-						<input class="form-control" type="text" required th:field="*{specializare}"/>
+					<div class="form-group">
+						<label for="SpecializareInput"><b>Specializare</b></label>
+						<div class="col-sm-8">
+								<input  class="form-control form-control-sm" type="text" th:field="*{specializare}" style="width:400px;"/>
+								<span id="error" th:if="${#fields.hasErrors('specializare')}" th:errors="*{specializare}">Full name error</span>
+						</div>
 					</div>
-				</div>
-				
-				<div class="form-group row m-2">
-					<label class="col-sm-4 col-form-label">An</label>
-					<div class="col-sm-8">
-						<input class="form-control" type="text" required th:field="*{an}"/>
+					<div class="form-group">
+						<label for="AnInput"><b>An</b></label>
+						<div class="col-sm-8">
+								<input class="form-control form-control-sm" type="number" th:field="*{an}" style="width:400px;"/>
+								<span id="error" th:if="${#fields.hasErrors('an')}" th:errors="*{an}">Full name error</span>
+						</div>
 					</div>
-				</div>
-				
-				<div class="form-group row m-2">
-					<label class="col-sm-4 col-form-label">Grupa</label>
-					<div class="col-sm-8">
-						<input class="form-control" type="text" required th:field="*{grupa}"/>
+					<div class="form-group">
+						<label for="GrupaInput"><b>Grupa</b></label>
+						<div class="col-sm-8">
+								<input class="form-control form-control-sm" type="number" th:field="*{grupa}" style="width:400px;"/>
+						</div>
 					</div>
-				</div>
-				
-				<div class="form-group row m-2">
-					<label class="col-sm-4 col-form-label">Universitate</label>
-					<div class="col-sm-8">
-						<input class="form-control" type="text" required th:field="*{universitate}"/>
+					<div class="form-group">
+						<label for="UniversitateInput"><b>Universitate</b></label>
+						<div class="col-sm-8">
+								<input class="form-control form-control-sm" type="text" th:field="*{universitate}" style="width:400px;"/>
+								<span id="error" th:if="${#fields.hasErrors('universitate')}" th:errors="*{universitate}">Full name error</span>
+						</div>
 					</div>
-				</div>
-				<div class="text-center">
-					<button type="submit" class="btn btn-primary m-2">Save</button>
-					<button type="button" class=" btn btn-secondary m-2" onclick="cancelForm()">Cancel</button>
-				</div>
+					<div class="text-center">
+						<button type="submit" class="btn btn-primary m-2">Salvare</button>
+						<button type="button" class=" btn btn-secondary m-2" onclick="cancelForm()">Anuleaza</button>
+					</div>
+				</form>
 			</div>
-		</form>
+		</div>
 	</div>
+</div>
 	<script type="text/javascript">
 		function cancelForm(){
 			window.location = "[[@{/groups}]]";
