--- a/StudentVotingSystem/src/main/resources/templates/login.html
+++ b/StudentVotingSystem/src/main/resources/templates/login.html
@@ -1,31 +1,47 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
-	<title>Please Login</title>
-	<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+	<title>Autentificare</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" th:href="@{/styles/login.css}"/>
+	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&family=Source+Serif+Pro:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
-   <div>
-   <div th:if="${param.error}">
-   		<p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
-   </div>
-   <div th:if="${param.logout}">
-   		<p class="text-warning">You have been logged out.</p>
-   </div>
-	   <form name='f' th:action="@{/login}" method='POST'>
-	      <table>
-	         <tr>
-	            <td>User:</td>
-	            <td><input type='text' name='username' value=''></td>
-	         </tr>
-	         <tr>
-	            <td>Password:</td>
-	            <td><input type='password' name='password' /></td>
-	         </tr>
-	         <tr>
-	            <td><input name="submit" type="submit" value="submit" /></td>
-	         </tr>
-	      </table>
-	  </form>
-  </div>
+	<section class="login py-5 bg-light">
+		<div class="container">
+			<div class="row g-0">
+				<div class="col-lg-6">
+					<img src="styles/login_image.png" class="img-fluid" alt="">
+				</div>
+				<div class="col-lg-5 text-center py-6">
+					<h1>Zona securizata</h1>
+					<div th:if="${param.error}">
+	   						<p class="text-danger">Autentificare nereusita!</p>
+	  					</div>
+					   	<div th:if="${param.logout}">
+					   		<p class="text-warning">Ati fost delogat!</p>
+					   	</div>
+					<form name='f' th:action="@{/login}" method='POST'>
+						<div class="form-row py-4 pt-5">
+							<div class="offset-1 col-lg-5">
+					   			<input class="inp px-2" type="text" placeholder="CNP" name='username' required>
+					   			 <span class="underline"></span>
+							</div>
+						</div>
+						<div class="form-row py-3">
+							<div class="offset-1 col-lg-5">
+								<input class="inp px-2" type="password" placeholder="Parola" name='password' required>
+							</div>
+						</div>
+						<div class="form-row py-5">
+							<div class="offset-1 col-lg-10">
+								<input type="submit" class="button_login" value="Login">
+							</div>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</section>
+   
 </body>
 </html>
