--- a/StudentVotingSystem/src/main/resources/templates/students.html
+++ b/StudentVotingSystem/src/main/resources/templates/students.html
@@ -2,97 +2,134 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Manage Students</title>
-<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+<title>Studenti</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" th:href="@{/styles/votingadmin.css}"/>
+<script src="https://kit.fontawesome.com/869eb986ed.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="container-fluid text-center">
-		<div><h2>Manage Students</h2></div>
-		<div class="m-2">
-			<a class="h3 text-decoration-none" th:href="@{/students/new}">Add New Student</a>
+	<nav class="navbar navbar-expand-md navbar-dark">
+		<a th:href="@{/voting_admin_home}" class="navbar-brand">Student Voting System</a>
+		<button
+			class="navbar-toggler"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#toggleMobileMenu"
+			aria-controls="toggleMobileMenu"
+			aria-expanded="false"
+			aria-label="Toggle Navigation"
+		>
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="toggleMobileMenu">
+			<ul class="navbar-nav ms-auto text-center">
+				<li>
+					<a class="nav-link active" th:href="@{/students}">Studenti</a>
+				</li>
+				<li>
+					<a class="nav-link" th:href="@{/elections}">Chestionare de Vot</a>
+				</li>
+				<li>
+					<a class="nav-link" th:href="@{/options}">Optiuni de Vot</a>
+				</li>
+				<li>
+					<a class="nav-link" th:href="@{/groups}">Grupuri</a>	
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" role="button">Profil</a>
+					<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+						<li class="dropdown-profile">Logat ca:<span sec:authentication="principal.authorities"></span></li>
+						<li class="dropdown-item">
+							<form th:action="@{/logout}" method="post">	
+								<input class="button_logout1" type="submit" value="Logout" />
+							</form>
+						</li>
+					</ul>
+				</li>
+			</ul>
 		</div>
-		
-		<div th:if="${message}" class="alert alert-success text-center">
-			[[${message}]]
-		</div>
-		
-		<div>&nbsp;</div>
-		
-		<div>
-			<form th:action="@{/students}">
-				Filter: <input type="text" name="keyword" th:value="${keyword}" required placeholder="Name, Email, CNP"/>
-				&nbsp;
-				<input type="submit" value="Search" />
-				&nbsp;
-				<input type="button" value="Clear" onclick="clearFilter()"/>
-			</form>
-		</div>
-		
-		<div>&nbsp;</div>
-		
-		 <div>
-			<table class="table table-bordered table table-striped table table-hover" style="width: 80%; margin-left: 15%;">
-				<thead class="table-dark">
-					<tr>
-						<th>ID Student</th>
-						<th>CNP</th>
-						<th>Nume</th>
-						<th>Prenume</th>
-						<th>Telefon</th>
-						<th>Email</th>
-						<th>Grup</th>
-						<th></th>
-					</tr>
-				</thead>
-			
-				<tbody>
-					<th:block th:each="student : ${StudentsList}">
-						<tr>
-							<td> [[${student.id_student}]]</td>
-							<td> [[${student.user.CNP}]]</td>
-							<td> [[${student.user.nume}]]</td>
-							<td> [[${student.user.prenume}]]</td>
-							<td> [[${student.user.telefon}]]</td>
-							<td> [[${student.user.email}]]</td>
-							<td> [[${student.groups}]]</td>
-							<td>
-								<a class="h4 mr-3 text-decoration-none btn btn-warning" th:href="@{'/students/edit/' + ${student.id_student}}">Edit</a>
-								<a class="h4 mr-3 text-decoration-none btn btn-danger" th:href="@{'/students/delete/' + ${student.id_student}}">Delete</a>
-							</td>
-						</tr>
-					</th:block>
-				</tbody>
-			</table>
-		</div>
-		
-		<div>
-			Total Students: [[${totalStudents}]] - Page [[${currentPage}]] of [[${totalPages}]]
+	</nav>
+	
+	<div class="filter">
+		<form th:action="@{/students}">
+			Filtrare: <input type="text" name="keyword" th:value="${keyword}" required placeholder="Name, Email, CNP"/>
 			&nbsp;
-			
-			<a th:if="${currentPage > 1}" th:href="@{/students/page/1}">First</a>
-			<span th:unless="${currentPage > 1}">First</span>
-			
-			<a th:if="${currentPage > 1}" th:href="@{'/students/page/' + ${currentPage - 1}}">Previous</a>
-			<span th:unless="${currentPage > 1}">Previous</span>
-			
-			<span th:each="i: ${#numbers.sequence(1, totalPages)}">
-				<a th:if="${i!=currentPage}" th:href="@{'/students/page/' + ${i}}">[[${i}]]</a>
-				<span th:unless="${i!=currentPage}">[[${i}]]</span>
-			</span>
-			
-			<a th:if="${currentPage < totalPages}" th:href="@{'/students/page/' + ${currentPage + 1}}">Next</a>
-			<span th:unless="${currentPage < totalPages}">Next</span>
-			
-			<a th:if="${currentPage < totalPages}" th:href="@{'/students/page/' + ${totalPages}}">Last</a>
-			<span th:unless="${currentPage < totalPages}">Last</span>
-			
-		</div>
+			<input type="submit" value="Search" />
+			&nbsp;
+			<input type="button" value="Clear" onclick="clearFilter()"/>
+		</form>
 	</div>
-	<a class="btn btn-info" onclick="GoBack()" style="margin-left: 15.5%;">Back</a>
+		
+	<div class="add">
+		<a class="h4 text-decoration-none" th:href="@{/students/new}">Adauga Student</a>
+	</div>
+	<div th:if="${message}" class="alert alert-success text-center">
+		[[${message}]]
+	</div>
+	
+	<div class="tables">
+		<table class="table table-bordered table-hover" >
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>CNP</th>
+					<th>Nume</th>
+					<th>Prenume</th>
+					<th>Telefon</th>
+					<th>Email</th>
+					<th>Grup</th>
+					<th></th>
+				</tr>
+			</thead>
+			<tbody>
+				<th:block th:each="student : ${StudentsList}">
+					<tr>
+						<td> [[${student.id_student}]]</td>
+						<td> [[${student.user.CNP}]]</td>
+						<td> [[${student.user.nume}]]</td>
+						<td> [[${student.user.prenume}]]</td>
+						<td> [[${student.user.telefon}]]</td>
+						<td> [[${student.user.email}]]</td>
+						<td> [[${student.groups}]]</td>
+						<td class="table-column-buttons">
+							<div class="row d-flex justify-content-center">
+								<div class="col-md-6 text-center">
+									<a class="btn btn-warning" th:href="@{'/students/edit/' + ${student.id_student}}"><i class="fas fa-edit"></i></a>
+								</div>
+								<div class="col-md-6 text-center" sec:authorize="hasAnyAuthority('all without delete')">
+									<a class="btn btn-danger" onclick="return confirm('Sunteti sigur ca doriti sa stergeti acest student?');" th:href="@{'/students/delete/' + ${student.id_student}}"><i class="fa-solid fa-trash-can"></i></a>
+								</div>
+							</div>
+						</td>
+					</tr>
+				</th:block>
+			</tbody>
+		</table>
+	</div>
+	
+	<div class="pagination">
+		Total: [[${totalStudents}]] - Page [[${currentPage}]] of [[${totalPages}]]
+		&nbsp;	
+		<a th:if="${currentPage > 1}" th:href="@{/students/page/1}">First</a>
+		<span th:unless="${currentPage > 1}">First</span>	
+		&nbsp;
+		<a th:if="${currentPage > 1}" th:href="@{'/students/page/' + ${currentPage - 1}}">Previous</a>
+		<span th:unless="${currentPage > 1}">Previous</span>
+		&nbsp;
+		<span th:each="i: ${#numbers.sequence(1, totalPages)}">
+			<a th:if="${i!=currentPage}" th:href="@{'/students/page/' + ${i}}">[[${i}]]</a>
+			<span th:unless="${i!=currentPage}">[[${i}]]</span>
+			&nbsp;
+		</span>
+		&nbsp;
+		<a th:if="${currentPage < totalPages}" th:href="@{'/students/page/' + ${currentPage + 1}}">Next</a>
+		<span th:unless="${currentPage < totalPages}">Next</span>
+		&nbsp;
+		<a th:if="${currentPage < totalPages}" th:href="@{'/students/page/' + ${totalPages}}">Last</a>
+		<span th:unless="${currentPage < totalPages}">Last</span>	
+	</div>
 	<script type="text/javascript">
-		function GoBack(){
-			window.location = "[[@{/voting_admin_home}]]";
-		}
 		function clearFilter(){
 			window.location="/students";
 		}
