--- a/StudentVotingSystem/src/main/resources/templates/velectionsList.html
+++ b/StudentVotingSystem/src/main/resources/templates/velectionsList.html
@@ -1,23 +1,57 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta charset="ISO-8859-1">
-<title>Available Elections</title>
-<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+<title>Bun venit!</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" th:href="@{/styles/voter.css}"/>
+<link rel="stylesheet" type="text/css" th:href="@{/styles/forms.css}"/>
+<script src="https://kit.fontawesome.com/869eb986ed.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </head>
 <body>
-	<div class="container-fluid text-center">
-		<div><h2>Available Elections</h2></div>
-		
-		<div th:if="${message}" class="alert alert-success text-center">
-			[[${message}]]
+
+	<nav class="navbar navbar-expand-md navbar-dark">
+		<a th:href="@{/voter_home}" class="navbar-brand">Student Voting System</a>
+		<button
+			class="navbar-toggler"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#toggleMobileMenu"
+			aria-controls="toggleMobileMenu"
+			aria-expanded="false"
+			aria-label="Toggle Navigation"
+		>
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="toggleMobileMenu">
+			<ul class="navbar-nav ms-auto text-center">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" role="button">Profil</a>
+					<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+						<li class="dropdown-profile">Logat ca:<span sec:authentication="principal.authorities"></span></li>
+						<li class="dropdown-item">
+							<form th:action="@{/logout}" method="post">	
+								<input class="button_logout1" type="submit" value="Logout" />
+							</form>
+						</li>
+					</ul>
+				</li>
+			</ul>
 		</div>
-		
-		  <div>
-			<table class="table table-bordered table table-striped table table-hover" style="width: 50%; margin-left: 25%;">
-				<thead class="table-dark">
+	</nav>
+	<h3>Chestionare disponibile</h3>
+	<div th:if="${message_error}" class="alert alert-danger text-center">
+		[[${message_error}]]
+	</div>
+	<div th:if="${message_success}" class="alert alert alert-success text-center">
+		[[${message_success}]]
+	</div>
+	<div class="table">
+		<table class="table table-bordered table-hover">
+				<thead >
 				<tr>
-					<th>ID</th>
 					<th>Denumire</th>
 					<th>Data Start</th>
 					<th>Ora Start</th>
@@ -29,25 +63,17 @@
 				<tbody>
 					<th:block th:each="election : ${ElectionsList}">
 						<tr>
-							<td> [[${election.id_chestionar}]]</td>
 							<td> [[${election.denumire}]]</td>
 							<td> [[${election.data_start}]]</td>
 							<td> [[${election.ora_start}]]</td>
 							<td> [[${election.data_final}]]</td>
 							<td> [[${election.ora_final}]]</td>
-							<td><a class="h4 mr-3 text-decoration-none btn btn-warning" th:href="@{'/voteFor/' + ${election.id_chestionar}}">See Candidates</a></td>
+							<td><a class="btn btn-warning text-center" th:href="@{'/voteFor/' + ${election.id_chestionar}}">Optiuni</a></td>
 							
 						</tr>
 					</th:block>
 				</tbody>
 			</table>
-		</div>
 	</div>
-	<a class="btn btn-info" onclick="GoBack()" style="margin-left: 25.5%;">Back</a>
-	<script type="text/javascript">
-		function GoBack(){
-			window.location = "[[@{/voter_home}]]";
-		}
-	</script>
-</body>
-</html>
+	</body>
+	</html>
