--- a/StudentVotingSystem/src/main/resources/templates/voteFor.html
+++ b/StudentVotingSystem/src/main/resources/templates/voteFor.html
@@ -1,33 +1,65 @@
 <head>
 <meta charset="ISO-8859-1">
-<title> Candidates</title>
-<link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+<title>Optiuni</title>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" th:href="@{/styles/voter.css}"/>
+<script src="https://kit.fontawesome.com/869eb986ed.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+<link rel="stylesheet" type="text/css" th:href="@{/styles/forms.css}"/>
 </head>
 <body>
-	<div class="container-fluid text-center">
-		<div><h2>Candidates</h2></div>
-		
-		<div th:if="${message}" class="alert alert-success text-center">
-			[[${message}]]
+<nav class="navbar navbar-expand-md navbar-dark">
+		<a th:href="@{/voter_home}" class="navbar-brand">Student Voting System</a>
+		<button
+			class="navbar-toggler"
+			type="button"
+			data-bs-toggle="collapse"
+			data-bs-target="#toggleMobileMenu"
+			aria-controls="toggleMobileMenu"
+			aria-expanded="false"
+			aria-label="Toggle Navigation"
+		>
+		<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="toggleMobileMenu">
+			<ul class="navbar-nav ms-auto text-center">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" role="button">Profil</a>
+					<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
+						<li class="dropdown-profile">Logat ca:<span sec:authentication="principal.authorities"></span></li>
+						<li class="dropdown-item">
+							<form th:action="@{/logout}" method="post">	
+								<input class="button_logout1" type="submit" value="Logout" />
+							</form>
+						</li>
+					</ul>
+				</li>
+			</ul>
 		</div>
-		<form th:action="@{/voteFor/save}" method="post" th:object="${election}"  style="max-width: 500px; margin:0 auto;">
-			<input type="hidden" th:field="*{id_chestionar}">
-		
-			<div th:each="option: ${OptionsList}" >
-				<div th:if="${option.election.nr_max_optiuni > 1}">
-					<input type="checkbox"  th:field="*{options}" th:text="${option.denumire}" th:value ="${option.id_optiune}"  class="m-2"/>
+	</nav>
+	<div class="container-form">
+		<div class="card"> 
+			<div class="card-body">
+				<h1 class="card-title"><h2 style="text-align: center;">Formular de vot</h2></h1>
+				<div class="card-text">
+					<form th:action="@{/voteFor/save}" method="post" th:object="${election}"  style="max-width: 500px; margin:0 auto;">
+						<input type="hidden" th:field="*{id_chestionar}">
+						<div th:each="option: ${OptionsList}" >
+							<div th:if="${option.election.nr_max_optiuni > 1}">
+								<input type="checkbox"  th:field="*{options}" th:text="${option.denumire}" th:value ="${option.id_optiune}"  class="m-2"/>
+							</div>
+						<div th:unless="${option.election.nr_max_optiuni > 1}">
+							<input type="radio" th:field="*{options}" th:text="${option.denumire}" th:value ="${option.id_optiune}" class="m-2"/>
+						</div>
+						</div>
+						<div class="text-center">
+							<button type="submit" class="btn btn-primary m-2" onclick="return confirm('Sunteti sigur ca doriti sa votati cu aceasta optiune?');">Save</button>
+							<button type="button" class=" btn btn-secondary m-2" onclick="cancelForm()">Cancel</button>
+						</div>
+					</form>
 				</div>
-				<div th:unless="${option.election.nr_max_optiuni > 1}">
-					<input type="radio" th:field="*{options}" th:text="${option.denumire}" th:value ="${option.id_optiune}" class="m-2"/>
-				</div>
-				
 			</div>
-			
-			<div class="text-center">
-					<button type="submit" class="btn btn-primary m-2">Save</button>
-					<button type="button" class=" btn btn-secondary m-2" onclick="cancelForm()">Cancel</button>
-			</div>
-		</form>
+		</div>
 	</div>
 	<script type="text/javascript">
 		function cancelForm(){
