--- a/StudentVotingSystem/src/main/resources/templates/groups.html
+++ b/StudentVotingSystem/src/main/resources/templates/groups.html
@@ -39,7 +39,7 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown" aria-expanded="false" role="button">Profil</a>
 					<ul class="dropdown-menu"  aria-labelledby="navbarDropdown">
-						<li class="dropdown-profile">Logat ca:<span sec:authentication="principal.authorities"></span></li>
+						<li class="dropdown-profile">Logat ca:<span sec:authentication="principal.authorities[0]"></span></li>
 						<li class="dropdown-item">
 							<form th:action="@{/logout}" method="post">	
 								<input class="button_logout1" type="submit" value="Logout" />
@@ -51,7 +51,7 @@
 		</div>
 	</nav>
 		
-	<div class="add">
+	<div class="add" sec:authorize="hasAnyAuthority('add')">
 		<a class="h4 text-decoration-none" th:href="@{/groups/new}">Adauga Grup</a>
 	</div>
 	<div th:if="${message}" class="alert alert-success text-center">
@@ -82,10 +82,10 @@
 							<td> [[${group.universitate}]]</td>
 							<td class="table-column-buttons">
 								<div class="row d-flex justify-content-center">
-									<div class="col-md-6 text-center">
+									<div class="col-md-6 text-center" sec:authorize="hasAnyAuthority('edit')">
 										<a class="btn btn-warning" th:href="@{'/groups/edit/' + ${group.id_grup}}"><i class="fas fa-edit"></i></a>
 									</div>
-									<div class="col-md-6 text-center">
+									<div class="col-md-6 text-center" sec:authorize="hasAnyAuthority('delete')">
 										<a class="btn btn-danger" onclick="return confirm('Sunteti sigur ca doriti sa stergeti acest grup?');" th:href="@{'/groups/delete/' + ${group.id_grup}}"><i class="fa-solid fa-trash-can"></i></a>
 									</div>
 								</div>
