--- a/StudentVotingSystem/src/main/resources/templates/voteFor.html
+++ b/StudentVotingSystem/src/main/resources/templates/voteFor.html
@@ -1,6 +1,6 @@
 <head>
 <meta charset="ISO-8859-1">
-<title>Optiuni</title>
+<title>Formular de vot</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 <link rel="stylesheet" type="text/css" th:href="@{/styles/voter.css}"/>
 <script src="https://kit.fontawesome.com/869eb986ed.js" crossorigin="anonymous"></script>
@@ -44,7 +44,7 @@
 				<div class="card-text">
 					<form th:action="@{/voteFor/save}" method="post" th:object="${election}"  style="max-width: 500px; margin:0 auto;">
 						<input type="hidden" th:field="*{id_chestionar}">
-						<div th:each="option: ${OptionsList}" >
+						<div class="text-center" th:each="option: ${OptionsList}" >
 							<div th:if="${option.election.nr_max_optiuni > 1}">
 								<input type="checkbox"  th:field="*{options}" th:text="${option.denumire}" th:value ="${option.id_optiune}"  class="m-2"/>
 							</div>
@@ -53,7 +53,7 @@
 						</div>
 						</div>
 						<div class="text-center">
-							<button type="submit" class="btn btn-primary m-2" onclick="return confirm('Sunteti sigur ca doriti sa votati cu aceasta optiune?');">Save</button>
+							<button sec:authorize="hasAnyAuthority('vote')" type="submit" class="btn btn-primary m-2" onclick="return confirm('Sunteti sigur ca doriti sa votati cu aceasta optiune?');">Save</button>
 							<button type="button" class=" btn btn-secondary m-2" onclick="cancelForm()">Cancel</button>
 						</div>
 					</form>
