--- a/StudentVotingSystem/src/main/resources/templates/voter_home.html
+++ b/StudentVotingSystem/src/main/resources/templates/voter_home.html
@@ -36,7 +36,7 @@ xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 		<div class="row">
 			<div>
 				<div sec:authorize="isAuthenticated()" class="auth">
-					Sunteti logat ca: <b><span sec:authentication="principal.authorities"></span></b>
+					Sunteti logat ca: <b><span sec:authentication="principal.authorities[0]"></span></b>
 				</div>
 			</div>
 		</div>
